--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><img src="images/bl-logo.png" alt="Logo" style="width:48px;height:48px;"/></a>
+					<a href="index.html" class="logo"><img src="images/wt-logo.png" alt="Logo" style="height:60px;"/></a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="generic.html">About</a>
