--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
 <html>
 	<head>
 		<title>Fasilito Auto Parts - Let us order your auto parts and get the best prices and quality.</title>
+		<meta name="description" content="Fasilito Auto Parts orders auto parts for costumers on demand with the best local market prices."/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="manifest.json">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#950000">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><img src="images/wt-logo.png" alt="Logo" style="height:60px;"/></a>
+					<a href="index.html" class="logo"><img src="images/wt-logo.png" alt="Logo" style="width:100px;"/></a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="generic.html">About</a>
 						<a href="elements.html">Order</a>
+						<a href="">Contact</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -30,33 +38,33 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Fasilito Auto Parts</h1>
+						<h1>Why should you let us order your auto parts?</h1>
 					</header>
 
-					<div class="flex ">
+					<div class="flex " id="flex-nowrap">
 
 						<div>
-							<span class="icon fa-car"></span>
-							<h3>Aliquam</h3>
-							<p>Suspendisse amet ullamco</p>
+							<span class="icon fa-money"></span>
+							<h3>Save Money</h3>
+							<p>You get brand new parts for less than the local market prices.</p>
 						</div>
 
 						<div>
-							<span class="icon fa-camera"></span>
-							<h3>Elementum</h3>
-							<p>Class aptent taciti ad litora</p>
+							<span class="icon fa-recycle"></span>
+							<h3>Rebuild</h3>
+							<p>You have the option to rebuild some specific auto parts.</p>
 						</div>
 
 						<div>
-							<span class="icon fa-bug"></span>
-							<h3>Ultrices</h3>
-							<p>Nulla vitae mauris non felis</p>
+							<span class="icon fa-cogs"></span>
+							<h3>Quality</h3>
+							<p>You get 100% best quality auto parts.</p>
 						</div>
 
 					</div>
 
 					<footer>
-						<a href="#" class="button">Get Started</a>
+						<a href="#" class="button">Order now</a>
 					</footer>
 				</div>
 			</section>
@@ -64,6 +72,10 @@
 
 		<!-- Three -->
 			<section id="three" class="wrapper align-center">
+				<header>
+					<h2>How does it work?</h2>
+					<sup>(In 5 easy steps)</sup>
+				</header>
 				<div class="inner">
 					<div class="flex flex-2">
 						<article>
@@ -96,34 +108,10 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
-
-					<h3>Get in touch</h3>
-
-					<form action="#" method="post">
-
-						<div class="field half first">
-							<label for="name">Name</label>
-							<input name="name" id="name" type="text" placeholder="Name">
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" placeholder="Email">
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-						</div>
-						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
-						</ul>
-					</form>
-
 					<div class="copyright">
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; 2017 - <script>document.write(new Date().getFullYear())</script> <a href="www.fasilitoautoparts.com">Fasilito Auto Parts</a>
+						<p>All rights reserved to their respective owners.</p>
 					</div>
-
-				</div>
 			</footer>
 
 		<!-- Scripts -->
