--- a/index.html
+++ b/index.html
@@ -73,36 +73,30 @@
 		<!-- Three -->
 			<section id="three" class="wrapper align-center">
 				<header>
-					<h2>How does it work?</h2>
+					<h2>How it works?</h2>
 					<sup>(In 5 easy steps)</sup>
 				</header>
 				<div class="inner">
-					<div class="flex flex-2">
-						<article>
-							<div class="image round">
-								<img src="images/pic01.jpg" alt="Pic 01" />
-							</div>
-							<header>
-								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
-							</header>
-							<p>Morbi in sem quis dui placerat ornare. Pellentesquenisi<br />euismod in, pharetra a, ultricies in diam sed arcu. Cras<br />consequat  egestas augue vulputate.</p>
-							<footer>
-								<a href="#" class="button">Learn More</a>
-							</footer>
-						</article>
-						<article>
-							<div class="image round">
-								<img src="images/pic02.jpg" alt="Pic 02" />
-							</div>
-							<header>
-								<h3>Sed feugiat<br /> tempus adipicsing</h3>
-							</header>
-							<p>Pellentesque fermentum dolor. Aliquam quam lectus<br />facilisis auctor, ultrices ut, elementum vulputate, nunc<br /> blandit ellenste egestagus commodo.</p>
-							<footer>
-								<a href="#" class="button">Learn More</a>
-							</footer>
-						</article>
-					</div>
+						<div class="flex" id="flex-nowrap">
+								<div class="how-it-works" id="hiw1" >
+										<div class="numberCircle">1</div><p style="text-align:left;">You begin by filling out a order form with all the specifications of the vehile and the parts.</p>
+								</div>							
+								<div class="how-it-works" id="hiw2" >
+										<div class="numberCircle">2</div><p style="text-align:left;">The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
+								</div>							
+								<div class="how-it-works" id="hiw3" >
+										<div class="numberCircle">3</div><p style="text-align:left;">You will recieve a price qoute email within 2 to 3 business day.</p>
+								</div>
+								<div class="how-it-works" id="hiw4" >
+										<div class="numberCircle">4</div><p style="text-align:left;">When you pay the price qoute, you will recieve a payment confirmation email.</p>
+								</div>
+								<div class="how-it-works" id="hiw5" >
+										<div class="numberCircle">5</div><p style="text-align:left;">Within 3 to 4 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
+								</div>				
+						</div>
+						<sub>*The payment proccess is done <strong>personal in cash</strong> or <strong>bank deposit/online transfer</strong>. <br />
+							*The order process can aslo be done through <strong>Whatsapp</strong> and <strong>Facebook</strong> or <strong>in person with an appointment</strong>.
+						</sub>
 				</div>
 			</section>
 
