Update to index

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<a href="index.html" class="logo"><img src="images/wt-logo.png" alt="Logo" style="width:100px;"/></a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">About</a>
-						<a href="elements.html">Order</a>
-						<a href="">Contact</a>
+						<a href="about.html">About</a>
+						<a href="order.html">Order</a>
+						<a href="contact.html">Contact</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -64,7 +64,7 @@
 					</div>
 
 					<footer>
-						<a href="#" class="button">Order now</a>
+						<a href="order.html" class="button">Order now</a>
 					</footer>
 				</div>
 			</section>
@@ -76,22 +76,22 @@
 					<h2>How it works?</h2>
 					<sup>(In 5 easy steps)</sup>
 				</header>
-				<div class="inner">
-						<div class="flex" id="flex-nowrap">
+				<div class="inner" id="inner-hiw">
+						<div class="flex" id="flex-nowrap" style="display:inline-block;">
 								<div class="how-it-works" id="hiw1" >
-										<div class="numberCircle">1</div><p style="text-align:left;">You begin by filling out a order form with all the specifications of the vehile and the parts.</p>
+										<div class="numberCircle">1</div><p>You begin by filling out a order form with all the specifications of the vehile and the parts.</p>
 								</div>							
 								<div class="how-it-works" id="hiw2" >
-										<div class="numberCircle">2</div><p style="text-align:left;">The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
+										<div class="numberCircle">2</div><p>The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
 								</div>							
 								<div class="how-it-works" id="hiw3" >
-										<div class="numberCircle">3</div><p style="text-align:left;">You will recieve a price qoute email within 2 to 3 business day.</p>
+										<div class="numberCircle">3</div><p>You will recieve a price qoute email within 2 to 3 business day.</p>
 								</div>
 								<div class="how-it-works" id="hiw4" >
-										<div class="numberCircle">4</div><p style="text-align:left;">When you pay the price qoute, you will recieve a payment confirmation email.</p>
+										<div class="numberCircle">4</div><p>When you pay the price qoute, you will recieve a payment confirmation email.</p>
 								</div>
 								<div class="how-it-works" id="hiw5" >
-										<div class="numberCircle">5</div><p style="text-align:left;">Within 3 to 4 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
+										<div class="numberCircle">5</div><p>Within 3 to 4 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
 								</div>				
 						</div>
 						<sub>*The payment proccess is done <strong>personal in cash</strong> or <strong>bank deposit/online transfer</strong>. <br />
@@ -103,7 +103,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 					<div class="copyright">
-						&copy; 2017 - <script>document.write(new Date().getFullYear())</script> <a href="www.fasilitoautoparts.com">Fasilito Auto Parts</a>
+						&copy; 2017 - <script>document.write(new Date().getFullYear())</script> <a href="http://fasilitoautoparts.com/">Fasilito Auto Parts</a>
 						<p>All rights reserved to their respective owners.</p>
 					</div>
 			</footer>
