Update to index

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<footer id="footer">
 					<div class="copyright">
 						&copy; 2017 - <script>document.write(new Date().getFullYear())</script> <a href="http://fasilitoautoparts.com/">Fasilito Auto Parts</a>
-						<p>All rights reserved to their respective owners.</p>
+						<p>All rights reserved to their respective owners..</p>
 					</div>
 			</footer>
 
