Fixed a minor typo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="inner" id="inner-hiw">
 						<div class="flex" id="flex-nowrap" style="display:inline-block;">
 								<div class="how-it-works" id="hiw1" >
-										<div class="numberCircle">1</div><p>You begin by filling out a order form with all the specifications of the vehile and the parts.</p>
+										<div class="numberCircle">1</div><p>You begin by filling out a order form with all the specifications of the vehicle and the parts.</p>
 								</div>							
 								<div class="how-it-works" id="hiw2" >
 										<div class="numberCircle">2</div><p>The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
@@ -91,7 +91,7 @@
 										<div class="numberCircle">4</div><p>When you pay the price qoute, you will recieve a payment confirmation email.</p>
 								</div>
 								<div class="how-it-works" id="hiw5" >
-										<div class="numberCircle">5</div><p>Within 3 to 4 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
+										<div class="numberCircle">5</div><p>Within 2 - 7 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
 								</div>				
 						</div>
 						<sub>*The payment proccess is done <strong>personal in cash</strong> or <strong>bank deposit/online transfer</strong>. <br />
