added placeholders forms

--- a/index.html
+++ b/index.html
@@ -5,114 +5,134 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Fasilito Auto Parts - Let us order your auto parts and get the best prices and quality.</title>
-		<meta name="description" content="Fasilito Auto Parts orders auto parts for costumers on demand with the best local market prices."/>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="manifest.json">
-		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#950000">
-		<meta name="theme-color" content="#ffffff">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo"><img src="images/wt-logo.png" alt="Logo" style="width:100px;"/></a>
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="about.html">About</a>
-						<a href="order.html">Order</a>
-						<a href="contact.html">Contact</a>
-					</nav>
-					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-				</div>
+<head>
+	<title>Fasilito Auto Parts - Let us order your auto parts and get the best prices and quality.</title>
+	<meta name="description" content="Fasilito Auto Parts orders auto parts for costumers on demand with the best local market prices."
+	/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="manifest.json">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#950000">
+	<meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="index.html" class="logo">
+				<img src="images/wt-logo.png" alt="Logo" style="width:100px;" />
+			</a>
+			<nav id="nav">
+				<a href="index.html">Home</a>
+				<a href="about.html">About</a>
+				<a href="order.html">Order</a>
+				<a href="contact.html">Contact</a>
+			</nav>
+			<a href="#navPanel" class="navPanelToggle">
+				<span class="fa fa-bars"></span>
+			</a>
+		</div>
+	</header>
+
+	<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<header>
+				<h1>Why should you let us order your auto parts?</h1>
 			</header>
 
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<header>
-						<h1>Why should you let us order your auto parts?</h1>
-					</header>
+			<div class="flex " id="flex-nowrap">
 
-					<div class="flex " id="flex-nowrap">
-
-						<div>
-							<span class="icon fa-money"></span>
-							<h3>Save Money</h3>
-							<p>You get brand new parts for less than the local market prices.</p>
-						</div>
-
-						<div>
-							<span class="icon fa-recycle"></span>
-							<h3>Rebuild</h3>
-							<p>You have the option to rebuild some specific auto parts.</p>
-						</div>
-
-						<div>
-							<span class="icon fa-cogs"></span>
-							<h3>Quality</h3>
-							<p>You get 100% best quality auto parts.</p>
-						</div>
-
-					</div>
-
-					<footer>
-						<a href="order.html" class="button">Order now</a>
-					</footer>
+				<div>
+					<span class="icon fa-money"></span>
+					<h3>Save Money</h3>
+					<p>You get brand new parts for less than the local market prices.</p>
 				</div>
-			</section>
 
-
-		<!-- Three -->
-			<section id="three" class="wrapper align-center">
-				<header>
-					<h2>How it works?</h2>
-					<sup>(In 5 easy steps)</sup>
-				</header>
-				<div class="inner" id="inner-hiw">
-						<div class="flex" id="flex-nowrap" style="display:inline-block;">
-								<div class="how-it-works" id="hiw1" >
-										<div class="numberCircle">1</div><p>You begin by filling out a order form with all the specifications of the vehicle and the parts.</p>
-								</div>							
-								<div class="how-it-works" id="hiw2" >
-										<div class="numberCircle">2</div><p>The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
-								</div>							
-								<div class="how-it-works" id="hiw3" >
-										<div class="numberCircle">3</div><p>You will recieve a price qoute email within 2 to 3 business day.</p>
-								</div>
-								<div class="how-it-works" id="hiw4" >
-										<div class="numberCircle">4</div><p>When you pay the price qoute, you will recieve a payment confirmation email.</p>
-								</div>
-								<div class="how-it-works" id="hiw5" >
-										<div class="numberCircle">5</div><p>Within 2 - 7 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
-								</div>				
-						</div>
-						<sub>*The payment proccess is done <strong>personal in cash</strong> or <strong>bank deposit/online transfer</strong>. <br />
-							*The order process can aslo be done through <strong>Whatsapp</strong> and <strong>Facebook</strong> or <strong>in person with an appointment</strong>.
-						</sub>
+				<div>
+					<span class="icon fa-recycle"></span>
+					<h3>Rebuild</h3>
+					<p>You have the option to rebuild some specific auto parts.</p>
 				</div>
-			</section>
 
-		<!-- Footer -->
-			<footer id="footer">
-					<div class="copyright">
-						&copy; 2017 - <script>document.write(new Date().getFullYear())</script> <a href="http://fasilitoautoparts.com/">Fasilito Auto Parts</a>
-						<p>All rights reserved to their respective owners..</p>
-					</div>
+				<div>
+					<span class="icon fa-cogs"></span>
+					<h3>Quality</h3>
+					<p>You get 100% best quality auto parts.</p>
+				</div>
+
+			</div>
+
+			<footer>
+				<a href="order.html" class="button">Order now</a>
 			</footer>
+		</div>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
-	</body>
+	<!-- Three -->
+	<section id="three" class="wrapper align-center">
+		<header>
+			<h2>How it works?</h2>
+			<sup>(In 5 easy steps)</sup>
+		</header>
+		<div class="inner" id="inner-hiw">
+			<div class="flex" id="flex-nowrap" style="display:inline-block;">
+				<div class="how-it-works" id="hiw1">
+					<div class="numberCircle">1</div>
+					<p>You begin by filling out a order form with all the specifications of the vehicle and the parts.</p>
+				</div>
+				<div class="how-it-works" id="hiw2">
+					<div class="numberCircle">2</div>
+					<p>The specifications will get forwarded to a employeer overseas to check price and if the item is available.</p>
+				</div>
+				<div class="how-it-works" id="hiw3">
+					<div class="numberCircle">3</div>
+					<p>You will recieve a price qoute email within 2 to 3 business day.</p>
+				</div>
+				<div class="how-it-works" id="hiw4">
+					<div class="numberCircle">4</div>
+					<p>When you pay the price qoute, you will recieve a payment confirmation email.</p>
+				</div>
+				<div class="how-it-works" id="hiw5">
+					<div class="numberCircle">5</div>
+					<p>Within 2 - 7 business day we will get in contact for you to come pickup your vehicle parts or we can deliver it to you.</p>
+				</div>
+			</div>
+			<sub>*The payment proccess is done
+				<strong>personal in cash</strong> or
+				<strong>bank deposit/online transfer</strong>.
+				<br /> *The order process can aslo be done through
+				<strong>Whatsapp</strong> and
+				<strong>Facebook</strong> or
+				<strong>in person with an appointment</strong>.
+			</sub>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="copyright">
+			&copy; 2017 -
+			<script>document.write(new Date().getFullYear())</script>
+			<a href="http://fasilitoautoparts.com/">Fasilito Auto Parts</a>
+			<p>All rights reserved to their respective owners..</p>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
